--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,12 @@ flutter:
 
   assets:
     - assets/images/
+  
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
