--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.0
   fluttertoast: ^8.2.5
   pin_code_fields: ^8.0.1
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
